--- a/assets/scss/_global.scss
+++ b/assets/scss/_global.scss
@@ -1,13 +1,16 @@
 :root {
   /* Colors */
-  --black: #000;
+  --purple: #7a4aab;
+  --light-purple: #a776de;
+  --dark-purple: #623a8a;
   --white: #fff;
+  --yellow: #ffbc01;
 
   /* Typography */
-  --main-font: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  --main-font: 'Quicksand', sans-serif;
 
   /* Units */
+  --container-xxl: 90rem; // 1440px
   --container-xl: 71.25rem; // 1140px
   --container-lg: 60rem; // 960px
   --container-md: 45rem; // 720px
@@ -17,7 +20,6 @@
 
 html {
   box-sizing: border-box;
-  height: 100%;
 }
 
 *,
@@ -27,17 +29,13 @@ html {
 }
 
 body {
-  color: var(--black);
+  color: var(--white);
   font-family: var(--main-font);
-  font-size: 1rem;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  background: var(--purple);
 }
 
 a {
-  color: var(--black);
+  color: var(--white);
   text-decoration: none;
 }
 
@@ -76,8 +74,36 @@ button {
   @include media-up(x-large-up) {
     max-width: var(--container-xl);
   }
+
+  @include media-up(xx-large-up) {
+    max-width: var(--container-xxl);
+  }
 }
 
 .no-overflow {
   overflow: hidden;
+}
+
+.train-animation {
+  overflow: hidden;
+
+  img {
+    animation: trainTransition 10s infinite linear;
+    position: relative;
+    top: -4px;
+  }
+}
+
+@keyframes trainTransition {
+  0% {
+    transform: translateX(-200px);
+  }
+
+  50% {
+    transform: translateX(calc(100vw + 110px));
+  }
+
+  100% {
+    transform: translateX(-110px);
+  }
 }
