--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -2,4 +2,10 @@
 @import 'normalize';
 @import 'reset';
 @import 'global';
-@import 'boilerplate';
+@import 'header';
+@import 'menu';
+@import 'home';
+@import 'sobre';
+@import 'espaco';
+@import 'atracoes';
+@import 'contato';
