--- a/assets/scss/_contato.scss
+++ b/assets/scss/_contato.scss
@@ -4,13 +4,18 @@
 
   &__container {
     display: grid;
-    grid-template-columns: repeat(12, 1fr);
     gap: 1.875rem;
     align-items: center;
+
+    @include media-up(medium-up) {
+      grid-template-columns: repeat(12, 1fr);
+    }
   }
 
   &__content {
-    grid-column: 1 / 7;
+    @include media-up(medium-up) {
+      grid-column: 1 / 7;
+    }
   }
 
   &__title {
@@ -18,12 +23,19 @@
     font-weight: 700;
     letter-spacing: -0.07em;
     margin-bottom: 1.25rem;
+
+    @include media-down(medium-down) {
+      text-align: center;
+    }
   }
 
   &__text {
     font-size: 1.125rem;
     line-height: 1.875rem;
     margin-bottom: 2.5rem;
+    @include media-down(medium-down) {
+      text-align: center;
+    }
   }
 
   &__map {
@@ -46,6 +58,7 @@
     align-items: center;
 
     &__icon {
+      flex-shrink: 0;
       width: 58px;
       height: 58px;
       color: var(--dark-purple);
@@ -66,7 +79,13 @@
   }
 
   &__form {
-    grid-column: 8 / 13;
+    @include media-up(medium-up) {
+      grid-column: 7 / 13;
+    }
+
+    @include media-up(large-up) {
+      grid-column: 8 / 13;
+    }
   }
 
   &__input {
@@ -82,10 +101,97 @@
       appearance: none;
       background: none;
       color: var(--white);
+      margin-bottom: 1.25rem;
+
+      &::-webkit-calendar-picker-indicator {
+        filter: invert(1);
+      }
 
       &:focus {
         outline: none;
+
+        & + label {
+          transform: none;
+          font-size: 0.875rem;
+          top: -0.375rem;
+          left: 0.625rem;
+          background: var(--purple);
+          padding: 0 0.625rem;
+        }
       }
     }
+
+    textarea {
+      display: block;
+      width: 100%;
+      padding: 1rem 1.25rem;
+      border: 0.125rem solid var(--white);
+      border-radius: 0.625rem;
+      appearance: none;
+      background: none;
+      color: var(--white);
+      height: 160px;
+      margin-bottom: 1.25rem;
+
+      & + label {
+        transform: none;
+        top: 1.25rem;
+      }
+
+      &:focus {
+        outline: none;
+
+        & + label {
+          transform: none;
+          font-size: 0.875rem;
+          top: -0.375rem;
+          left: 0.625rem;
+          background: var(--purple);
+          padding: 0 0.625rem;
+        }
+      }
+    }
+
+    label {
+      position: absolute;
+      top: 50%;
+      left: 1.25rem;
+      transform: translateY(-50%);
+      cursor: text;
+      transition: all 0.3s;
+
+      &.date {
+        transform: none;
+        font-size: 0.875rem;
+        top: -0.375rem;
+        left: 0.625rem;
+        background: var(--purple);
+        padding: 0 0.625rem;
+      }
+
+      &.active {
+        transform: none;
+        font-size: 0.875rem;
+        top: -0.375rem;
+        left: 0.625rem;
+        background: var(--purple);
+        padding: 0 0.625rem;
+      }
+    }
+  }
+
+  &__button {
+    display: block;
+    text-align: center;
+    width: 100%;
+    appearance: none;
+    border: none;
+    background: var(--yellow);
+    color: var(--purple);
+    letter-spacing: -0.02em;
+    font-weight: 700;
+    font-size: 1.25rem;
+    padding: 1.25rem 1rem;
+    border-radius: 0.9375rem;
   }
 }
