--- a/assets/scss/_menu.scss
+++ b/assets/scss/_menu.scss
@@ -3,9 +3,26 @@
     display: none;
   }
 
+  &.active {
+    @include media-down(large-down) {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      min-height: 100vh;
+      background: var(--purple);
+      z-index: 998;
+    }
+  }
+
   &__list {
-    display: flex;
-    align-items: center;
+    @include media-up(large-up) {
+      display: flex;
+      align-items: center;
+    }
   }
 
   &__item {
