--- a/assets/scss/_espaco.scss
+++ b/assets/scss/_espaco.scss
@@ -58,19 +58,25 @@
 
     &:hover {
       .espaco__balls {
-        div {
-          background-position: 0;
-        }
+        background-position: 0;
       }
     }
   }
 
   &__balls {
+    overflow: hidden;
     width: 100%;
     height: 28px;
     display: flex;
     justify-content: space-between;
-    overflow: hidden;
+    background: linear-gradient(
+      90deg,
+      var(--yellow) 50%,
+      var(--dark-purple) 50%
+    );
+    background-size: 200%;
+    background-position: center right;
+    transition: all 0.3s;
 
     @include media-down(small-down) {
       display: none;
@@ -80,20 +86,13 @@
       width: 28px;
       height: 28px;
       flex-shrink: 0;
-      background: linear-gradient(
-        90deg,
-        var(--yellow) 50%,
-        var(--dark-purple) 50%
-      );
+      background: transparent;
+      overflow: hidden;
       border-radius: 50%;
-      background-size: 200%;
-      background-position: 100%;
-      @for $i from 1 through 11 {
-        $value: (($i - 1) / 10) + s;
-        &:nth-of-type(#{$i}) {
-          transition: all 0.1s;
-          transition-delay: $value;
-        }
+      box-shadow: 0 0 0 20px var(--purple);
+
+      @include media-up(xx-large-up) {
+        box-shadow: 0 0 0 23px var(--purple);
       }
     }
 
@@ -107,6 +106,94 @@
     &--right {
       div {
         margin-right: 1.25rem;
+      }
+    }
+  }
+
+  &__wrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1.25rem 0.5rem;
+
+    @include media-up(small-up) {
+      grid-template-columns: repeat(12, 1fr);
+    }
+
+    @include media-up(medium-up) {
+      gap: 1.875rem;
+    }
+
+    a {
+      display: block;
+      border: 0.5rem solid var(--light-purple);
+      border-radius: 1.25rem;
+      overflow: hidden;
+      transition: all 1s;
+
+      &:hover {
+        border-color: var(--yellow);
+      }
+
+      @include media-up(medium-up) {
+        border: 0.9375rem solid var(--light-purple);
+        border-radius: 1.875rem;
+      }
+
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: center;
+      }
+
+      &:nth-of-type(5n + 1) {
+        @include media-up(small-up) {
+          grid-column: 1 / 7;
+        }
+
+        @include media-up(medium-up) {
+          grid-column: 1 / 9;
+        }
+      }
+
+      &:nth-of-type(5n + 2) {
+        @include media-up(small-up) {
+          grid-column: 7 / 13;
+        }
+
+        @include media-up(medium-up) {
+          grid-column: 9 / 13;
+        }
+      }
+
+      &:nth-of-type(5n + 3) {
+        @include media-up(small-up) {
+          grid-column: 1 / 5;
+        }
+
+        @include media-up(medium-up) {
+          grid-column: 1 / 4;
+        }
+      }
+
+      &:nth-of-type(5n + 4) {
+        @include media-up(small-up) {
+          grid-column: 5 / 9;
+        }
+
+        @include media-up(medium-up) {
+          grid-column: 4 / 10;
+        }
+      }
+
+      &:nth-of-type(5n + 5) {
+        @include media-up(small-up) {
+          grid-column: 9 / 13;
+        }
+
+        @include media-up(medium-up) {
+          grid-column: 10 / 13;
+        }
       }
     }
   }
