--- a/assets/scss/_menu.scss
+++ b/assets/scss/_menu.scss
@@ -15,6 +15,8 @@
       min-height: 100vh;
       background: var(--purple);
       z-index: 998;
+      opacity: 0;
+      animation: showMenu 0.5s forwards;
     }
 
     &::before {
@@ -74,6 +76,43 @@
     @include media-down(large-down) {
       text-align: center;
       font-size: 1.625rem;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+
+    &::after {
+      @media (max-width: 400px) {
+        box-shadow: -2rem 0 var(--dark-purple), -4rem 0 var(--dark-purple);
+      }
+
+      @include media-down(large-down) {
+        content: '';
+        display: block;
+        width: 1rem;
+        height: 1rem;
+        border-radius: 50%;
+        background: var(--dark-purple);
+        box-shadow: -2rem 0 var(--dark-purple), -4rem 0 var(--dark-purple),
+          2rem 0 var(--dark-purple);
+      }
+    }
+
+    &::before {
+      @media (max-width: 400px) {
+        box-shadow: 2rem 0 var(--dark-purple), 4rem 0 var(--dark-purple);
+      }
+
+      @include media-down(large-down) {
+        content: '';
+        display: block;
+        width: 1rem;
+        height: 1rem;
+        border-radius: 50%;
+        background: var(--dark-purple);
+        box-shadow: 2rem 0 var(--dark-purple), 4rem 0 var(--dark-purple),
+          -2rem 0 var(--dark-purple);
+      }
     }
 
     &--button {
@@ -82,6 +121,29 @@
       line-height: 1;
       padding: 0.9375rem 2.625rem;
       border-radius: 0.9375rem;
+
+      @include media-down(large-down) {
+        display: block;
+        font-size: 1.125rem;
+        width: 320px;
+        max-width: 375px !important;
+        padding-right: 1rem;
+        padding-left: 1rem;
+      }
+
+      &::after {
+        display: none !important;
+      }
+
+      &::before {
+        display: none !important;
+      }
     }
+  }
+}
+
+@keyframes showMenu {
+  to {
+    opacity: 1;
   }
 }
