--- a/assets/scss/_espaco.scss
+++ b/assets/scss/_espaco.scss
@@ -1,5 +1,7 @@
 .espaco {
   padding-bottom: 3.75rem;
+  background: url('./images/espaco/bg.png') no-repeat top 500px left
+    calc((50% - 650px));
 
   &::before {
     content: '';
@@ -41,6 +43,11 @@
     font-weight: 700;
     text-align: center;
     letter-spacing: -0.02em;
+    transition: all 0.3s;
+
+    &:hover {
+      box-shadow: 0px 0px 30px rgba(255, 188, 1, 0.89);
+    }
 
     @include media-down(small-down) {
       margin: 0 auto;
