--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -1,10 +1,28 @@
 .header {
-  background: rgba(#623a8a, 0.7);
+  background-color: rgba(#623a8a, 0.7);
   padding-top: 0.25rem;
   padding-bottom: 0.1875rem;
   z-index: 999;
   position: sticky;
   top: 0;
+
+  @include media-up(medium-up) {
+    background-image: url('./images/header-bg.svg');
+    background-repeat: no-repeat;
+    background-position: top 0 left calc(50% - 470px);
+  }
+
+  @include media-up(large-up) {
+    background-position: top 0 left calc(50% - 600px);
+  }
+
+  @include media-up(x-large-up) {
+    background-position: top 0 left calc(50% - 700px);
+  }
+
+  @include media-up(xx-large-up) {
+    background-position: top 0 left calc(50% - 900px);
+  }
 
   &__container {
     display: flex;
