--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -5,6 +5,7 @@
 
   &__container {
     display: grid;
+    background: url('./images/home/home-bg-1.png') no-repeat top right 470px;
 
     @include media-up(medium-up) {
       grid-template-columns: repeat(12, 1fr);
@@ -73,6 +74,7 @@
     padding: 1.5rem 1rem;
     line-height: 93.5%;
     text-align: center;
+    transition: all 0.3s;
 
     @include media-up(xx-large-up) {
       font-size: 1.25rem;
@@ -96,6 +98,10 @@
       @include media-up(xx-large-up) {
         margin-right: 1.875rem;
       }
+
+      &:hover {
+        box-shadow: 0px 0px 30px rgba(255, 188, 1, 0.89);
+      }
     }
 
     &:nth-child(2) {
@@ -105,6 +111,13 @@
       @include media-up(small-up) {
         width: 100%;
         max-width: 185px;
+      }
+
+      &:hover {
+        background: var(--yellow);
+        color: var(--purple);
+        border: 0.125rem solid var(--yellow);
+        box-shadow: 0px 0px 30px rgba(255, 188, 1, 0.89);
       }
     }
   }
@@ -117,6 +130,12 @@
     align-items: center;
     flex-wrap: wrap;
 
+    div {
+      width: 2.75rem;
+      height: 2.75rem;
+      margin-right: 0.5rem;
+    }
+
     @media (max-width: 355px) {
       flex-direction: column;
     }
@@ -125,24 +144,6 @@
       text-align: center;
       justify-content: center;
       font-size: 1rem;
-    }
-
-    &::before {
-      content: '';
-      width: 2.375rem;
-      height: 2.375rem;
-      background: var(--yellow);
-      display: block;
-      border-radius: 50%;
-      flex-shrink: 0;
-
-      @media (max-width: 355px) {
-        margin-bottom: 0.875rem;
-      }
-
-      @media (min-width: 356px) {
-        margin-right: 0.875rem;
-      }
     }
   }
 
