--- a/assets/scss/_menu.scss
+++ b/assets/scss/_menu.scss
@@ -123,6 +123,11 @@
       line-height: 1;
       padding: 0.9375rem 2.625rem;
       border-radius: 0.9375rem;
+      transition: all 0.3s;
+
+      &:hover {
+        box-shadow: 0px 0px 30px rgba(255, 188, 1, 0.89);
+      }
 
       @include media-down(large-down) {
         display: block;
