--- a/assets/scss/_slider.scss
+++ b/assets/scss/_slider.scss
@@ -217,6 +217,15 @@
       bottom: -140px;
       left: 50%;
       transform: translateX(-50%);
+      transition: all 0.3s;
+
+      &:hover {
+        color: var(--yellow) !important;
+
+        svg {
+          box-shadow: 0px 0px 30px rgba(255, 188, 1, 0.89);
+        }
+      }
 
       @include media-up(medium-up) {
         bottom: -101px;
