--- a/assets/scss/_sobre.scss
+++ b/assets/scss/_sobre.scss
@@ -62,6 +62,11 @@
     padding: 1.625rem 1rem;
     border-radius: 0.9375rem;
     text-align: center;
+    transition: all 0.3s;
+
+    &:hover {
+      box-shadow: 0px 0px 30px #7a4aab;
+    }
   }
 
   &__image {
