--- a/assets/scss/_atracoes.scss
+++ b/assets/scss/_atracoes.scss
@@ -1,7 +1,7 @@
 .atracoes {
   padding-top: 3.75rem;
   padding-bottom: 3.75rem;
-  background: var(--white);
+  background: #f3f0ff;
 
   &__title {
     text-align: center;
