--- a/assets/scss/_menu.scss
+++ b/assets/scss/_menu.scss
@@ -74,6 +74,11 @@
     font-size: 1.125rem;
     font-weight: 700;
     line-height: 1.375rem;
+    transition: all 0.3s;
+
+    &:hover {
+      color: var(--yellow);
+    }
 
     @include media-down(large-down) {
       text-align: center;
@@ -127,6 +132,7 @@
 
       &:hover {
         box-shadow: 0px 0px 30px rgba(255, 188, 1, 0.89);
+        color: var(--purple);
       }
 
       @include media-down(large-down) {
