--- a/assets/scss/_espaco.scss
+++ b/assets/scss/_espaco.scss
@@ -44,6 +44,7 @@
     text-align: center;
     letter-spacing: -0.02em;
     transition: all 0.3s;
+    font-size: 1.25rem;
 
     &:hover {
       box-shadow: 0px 0px 30px rgba(255, 188, 1, 0.89);
