--- a/assets/scss/_slider.scss
+++ b/assets/scss/_slider.scss
@@ -44,7 +44,7 @@
 
   &__item {
     width: 360px;
-    height: 560px;
+    height: 620px;
     overflow: hidden;
     border-radius: 1.875rem;
     position: relative;
@@ -61,6 +61,10 @@
       top: 0;
       left: 0;
       transition: all 0.3s;
+    }
+
+    @include media-down(small-down) {
+      height: 560px;
     }
 
     @include media-up(small-up) {
